tests/ui/rfcs/rfc-1445-restrict-constants-in-patterns/feature-gate.no_gate.stderr
error[E0658]: use of unstable library feature `structural_match`
  --> $DIR/feature-gate.rs:27:6
   |
LL | impl std::marker::StructuralPartialEq for Foo { }
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #31434 <https://github.com/rust-lang/rust/issues/31434> for more information
   = help: add `#![feature(structural_match)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
